# AdventOfCode2021

./: .gitignore  Cargo.toml
AoC2022/: Cargo.toml  machine.oz
AoC2024/: go.mod  new-day.sh  template.txt
AoC2024/cmd/day-01/: main.go
AoC2024/cmd/day-02/: main.go
AoC2024/cmd/day-03/: main.go
AoC2024/cmd/day-04/: main.go
AoC2024/cmd/day-05/: main.go
AoC2024/cmd/day-06/: main.go
AoC2024/cmd/day-07/: main.go
AoC2024/cmd/day-08/: main.go
AoC2024/cmd/day-09/: main.go
AoC2024/cmd/day-10/: main.go
AoC2024/cmd/day-11/: main.go
AoC2024/cmd/day-12/: main.go
AoC2024/cmd/day-13/: main.go
AoC2024/cmd/day-14/: back.go  log3.txt  main.go
AoC2024/cmd/day-16/: main.go
AoC2024/cmd/day-17/: main.go
AoC2024/cmd/day-18/: main.go
AoC2024/cmd/day-19/: main.go
AoC2024/cmd/day-20/: main.go
AoC2024/cmd/day-21/: main.go
AoC2024/cmd/day-22/: main.go
AoC2024/cmd/day-23/: main.go
AoC2024/cmd/day-24/: input2.txt  main.go
AoC2024/cmd/day-25/: input.txt  main.go
python/: day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day14.py  day18.py
src/: main.rs
