[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde_json = { version = "1.0.87" }
serde = { version = "1.0.147", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.9.0"
threadpool = "1.8.1"
num-bigint = "0.4.3"